--- a/index.qmd
+++ b/index.qmd
@@ -62,13 +62,13 @@ format:
 
 <p class="hero-banner-date">
 
-21.05.2025
+28.05.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Дисконт на нефть ESPO достиг 4-месячного минимума
+Китай наращивает трубопроводные поставки российской нефти
 
 </p>
 :::
@@ -82,13 +82,13 @@ format:
 
 <p class="hero-banner-date">
 
-21.05.2025
+28.05.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Экспортная судьба бензина вновь под ударом
+Новые ограничения не помешают российскому экспорту
 
 </p>
 :::
@@ -302,13 +302,13 @@ format:
 
 <p class="hero-banner-date">
 
-20.05.2025
+27.05.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Фрахт обновил годовой минимум и вернулся к уровню конца 2024 г.
+Новые ограничения против флота увеличили фрахт
 
 </p>
 :::
@@ -322,13 +322,13 @@ format:
 
 <p class="hero-banner-date">
 
-20.05.2025
+27.05.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Ставки «Aframax» вернулись на уровень осени 2024 г.
+Светлые ставки набирают обороты
 
 </p>
 :::
