--- a/markets/freight-crude.qmd
+++ b/markets/freight-crude.qmd
@@ -17,6 +17,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*27.05.2025 Морская логистика. Нефть*
+
+**Новые ограничения против флота увеличили фрахт**
+
+Евросоюз в начале прошлой недели расширил ограничения против российского нефтяного комплекса, включив в блокирующие списки более 180 танкеров. 
+
+Новые ограничения привели к росту ставок в Балтике и Черном море, поскольку фрахтователи стали отказываться от танкеров, попавших под них.
+
+В среднем ставки на перевозку российской нефти до Индии выросли на 0,5-2 долл./барр. Ставка на Suezmax из Новороссийска превысила отметку в 6,5 долл./барр., а ставка на Aframax из Балтики превысила отметку в 8 долл./барр. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *20.05.2025 Морская логистика. Нефть*
 
 **Фрахт обновил годовой минимум и вернулся к уровню конца 2024 г.**
@@ -45,25 +57,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*29.04.2025 Морская логистика. Нефть*
-
-**Конкуренция среди перевозчиков нефти сдерживает рост ставок**
-
-Широкая доступность свободного тоннажа на рынке перевозок российской нефти сдерживает рост фрахтовых ставок.
-
-Экспорт российской нефти с Балтики вырос на 15,5% н/н, а ставки Aframax до Индии и Китая не изменились.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*22.04.2025 Морская логистика. Нефть*
-
-**Конкуренция за перевозку нефти восстановила российский экспорт**
-
-Увеличение доступного для перевозок российской нефти флота за счет возвращения западных судовладельцев на российский рынок привело к профициту тоннажа на рынке. В условиях роста конкуренции ставки на перевозку снижались.
-
-Ставки фрахта Aframax из Балтики до Индии упали на 8,4% н/н, а из Козьмино до Китая – почти на треть. Российские экспортеры воспользовались продолжающимся падением ставок фрахта и увеличили экспорт нефти на 22% н/н.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
