--- a/markets/freight-products.qmd
+++ b/markets/freight-products.qmd
@@ -17,9 +17,20 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*27.05.2025 Морская логистика. Нефтепродукты*
+
+**Светлые ставки набирают обороты**
+
+Восстановление экспорта российских светлых нефтепродуктов на 32% н/н обусловило рост ставок фрахта на большинстве направлений. Стоимость перевозки из портов Балтики выросла более чем на 5 долл./т н/н по всем маршрутам. 
+
+Ставки фрахта темных нефтепродуктов судами класса «Aframax» выросли на 5 долл./т н/н по всем направлениям, но находятся на уровне конца 2024 г.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 *20.05.2025 Морская логистика. Нефтепродукты*
 
-**Ставки «Aframax» вернулись на уровень осени 2024 г. **
+**Ставки «Aframax» вернулись на уровень осени 2024 г.**
 
 Стоимость перевозки светлых нефтепродуктов из портов Балтики и АЧБ в регион Западной Африки снизилась на 4,2 долл./т и 3,3 долл./т н/н соответственно.
 
@@ -59,27 +70,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*22.04.2025 Морская логистика. Нефтепродукты*
-
-**Российские нефтепродукты нашли новые маршруты**
-
-Ставки на перевозку светлых нефтепродуктов снизились по всем маршрутам из портов Балтики. Стоимость фрахта из портов Черного моря увеличилась по всем направлениям за исключением Западной Африки (-0,8 долл./т н/н).
-
-Профицит свободного тоннажа обусловил падение стоимости фрахта темных нефтепродуктов танкерами грузоподъемностью 100 тыс. т на 1 долл./т н/н по всем направлениям.
-
-Зафиксирована первая поставка российского автомобильного бензина в США в 2025 г.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*15.04.2025 Морская логистика. Нефтепродукты*
-
-**Падение цены на нефть РФ привело к снижению фрахта нефтепродуктов**
-
-Ставки на перевозку светлых нефтепродуктов снизились на большинстве направлений. Стоимость перевозки выросла только по маршруту Черное море – Индия/Ближний Восток (+0,8 долл./т н/н).
-
-Стоимость фрахта темных нефтепродуктов танкерами грузоподъемностью 100 тыс. т снизилась на 2 долл./т н/н по всем направлениям, что обусловлено наличием свободного тоннажа на фоне падения стоимости российской нефти ниже ценового потолка в 60 долл./барр.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
