--- a/markets/markets-oil-products.qmd
+++ b/markets/markets-oil-products.qmd
@@ -16,6 +16,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*28.05.2025 Дизель*
+
+**Новые ограничения не помешают российскому экспорту**
+
+Растущая конкуренция на международной арене обусловила расширение дисконта на российское дизельное топливо (ДТ) более чем на 3 долл./т н/н.
+
+По итогам отчетной недели биржевые цены на ДТл на внутреннем рынке увеличились на 387 руб./т н/н.
+
+В Хабаровском крае планируется строительство нового нефтеперерабатывающего завода (НПЗ) и увеличение производственных мощностей текущего НПЗ.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *21.05.2025 Бензин*
 
 **Экспортная судьба бензина вновь под ударом**
@@ -36,13 +48,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*07.05.2025 Бензин*
-
-**Весна в разгаре, бензин в ударе**
-
-Запасов автомобильного бензина достаточно для нивелирования рисков топливного дефицита на внутреннем рынке.
-
-Сезонный спрос и потребительский ажиотаж на фоне приближающихся плановых ремонтов на нефтеперерабатывающих заводах (НПЗ) подтолкнули внутренние биржевые цены вверх.
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -60,8 +65,7 @@ format:
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-
-### Морская логистика 
+### Морская логистика
 
 [Фрахт нефтепродуктов](freight-products.qmd)
 
