--- a/markets/markets-oil.qmd
+++ b/markets/markets-oil.qmd
@@ -16,6 +16,17 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*28.05.2025 Нефть*
+
+**Китай наращивает трубопроводные поставки российской нефти**
+
+На прошлой неделе средняя цена российской нефти Urals не изменилась, несмотря на введенные ограничения со стороны Евросоюза на танкерный флот, участвовавший в ее перевозках. Нефть Urals в Приморске и Новороссийске торговалась около отметки в 53 долл./барр., а нефть ESPO продолжает торговаться в районе 61 долл./барр.
+
+По итогам прошлой недели экспорт российской нефти вырос на 3,1% н/н. Китайские государственные НПЗ в мае 2025 г. нарастили морские закупки ESPO на 300 тыс. т м/м, а независимые НПЗ снизили их на 400 тыс. т м/м. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 *21.05.2025 Нефть*
 
 **Дисконт на нефть ESPO достиг 4-месячного минимума**
@@ -115,7 +126,6 @@ hc
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
-
 ### Морская логистика
 
 [Фрахт нефти](freight-crude.qmd)
