--- a/index.qmd
+++ b/index.qmd
@@ -122,13 +122,13 @@ format:
 
 <p class="hero-banner-date">
 
-28.07.2025
+11.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Ценовые горки на коксующийся уголь
+Юго-Восточная Азия поднимает цены
 
 </p>
 :::
@@ -142,13 +142,13 @@ format:
 
 <p class="hero-banner-date">
 
-04.08.2025
+11.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Рынок карбамида не может угнаться за индийским голодом
+Индия несёт премию на мировой рынок карбамида
 
 </p>
 :::
@@ -182,13 +182,13 @@ format:
 
 <p class="hero-banner-date">
 
-01.08.2025
+08.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Продавцы цепляются за цены
+Нефтехимия нащупала дно, или оттуда ещё постучат?
 
 </p>
 :::
@@ -202,13 +202,13 @@ format:
 
 <p class="hero-banner-date">
 
-04.08.2025
+11.08.2025
 
 </p>
 
 <p class="hero-banner-caption">
 
-Ирак и Индонезия ждут импортную пшеницу
+Экспортные пошлины на зерновые на нуле
 
 </p>
 :::
@@ -481,7 +481,7 @@ format:
 :::
 
 ::: g-col-6
-8 августа 2025. Сырьевой индекс ЦЦИ. **Сырьевые цены оттолкнулись от дна**
+6 августа 2025. Сырьевой индекс ЦЦИ. **Сырьевые цены оттолкнулись от дна**
 
 [Мониторинг июль -\>](reports/2025-07%20Сырьевой%20индекс%20ЦЦИ.pdf)
 
@@ -500,7 +500,6 @@ format:
 4 июня 2025. Сырьевой индекс ЦЦИ. **Снижение тарифов не добавило ценам оптимизма**
 
 [Мониторинг май -\>](reports/2025-05%20Сырьевой%20индекс%20ЦЦИ.pdf)
-
 :::
 
 ::: g-col-6
