--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -17,13 +17,30 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*11.08.2025* Уголь
+
+**Юго-Восточная Азия поднимает цены**
+
+Снижение предложения пылеугольного топлива (PCI LV) для металлургии на рынке морской торговли поддержало цены в странах Юго-Восточной Азии, включая Вьетнам и Индонезию. 
+Рынок Китая замер после дальнейших ограничений добычи на угольных предприятиях и повышения цен на доменный кокс.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*04.08.2025* Уголь
+
+**Волатильность цен есть, оптимизма нет**
+
+Подскок стоимости коксующегося угля на прошлой неделе не привел к устойчивому восстановлению цен. Экспортные котировки на металлургические угли снизились на 2,5-2,9%, участники рынка настроены сдержанно относительно дальнейших перспектив.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *28.07.2025* Уголь
 
 **Ценовые горки на коксующийся уголь**
 
-Снижение предложения коксующегося угля на рынке КНР привело к волатильности цен на прошлой неделе. Экспортная стоимость российских жирных марок выросла на 16,2% до 119 долл./т FOB Far East, однако опрошенные трейдеры не верят в долгосрочность данного тренда. Настроения также подтверждаются динамикой фьючерсов на коксующийся уголь на Даляньской товарной бирже: после ралли на прошлой неделе с ростом цен на более чем 320 юаней, торги в понедельник открылись падением на чуть менее 140 юаней.   
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+Снижение предложения коксующегося угля на рынке КНР привело к волатильности цен на прошлой неделе. Экспортная стоимость российских жирных марок выросла на 16,2% до 119 долл./т FOB Far East, однако опрошенные трейдеры не верят в долгосрочность данного тренда. Настроения также подтверждаются динамикой фьючерсов на коксующийся уголь на Даляньской товарной бирже: после ралли на прошлой неделе с ростом цен на более чем 320 юаней, торги в понедельник открылись падением на чуть менее 140 юаней.
 
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *21.07.2025* Уголь
 
@@ -56,22 +73,6 @@ format:
 Правительство КНР заявило, что США снимут некоторые ограничения на торговлю с Китаем. В результате китайские промышленные предприятия начали активнее покупать коксующийся уголь, что вызвало повышение цен на 2-3 долл./т марки ГЖ.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*23.06.2025* Уголь
-
-**Цены игнорируют дно**
-
-Несмотря на предельно низкий уровень цен, экспортная стоимость угля продолжает медленно снижаться. Коксующийся уголь марки ГЖ в портах Китая оценивается на уровне 100 долл./т CFR China, что на 30 долл. ниже, чем в начале 2025 г.
-
-![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
-
-*16.06.2025* Уголь
-
-**Запасы высокие, спрос низкий**
-
-Рынок остается под тяжестью профицита угля и снижения объемов импорта в Китае. Спрос в Индии также слабый из-за раннего начала сезона муссонов и высоких запасов угля на электростанциях.
-
-![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 
 
 ### События
