--- a/markets/markets-fertilizers.qmd
+++ b/markets/markets-fertilizers.qmd
@@ -17,14 +17,23 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*11.08.2025 Минеральные удобрения*
+
+**Индия несёт премию на мировой рынок карбамида**
+
+По итогам индийского тендера индекс цен CFR India вырос на 7%. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
+
 *04.08.2025 Минеральные удобрения*
 
 **Рынок карбамида не может угнаться за индийским голодом**
 
-Индийский импортер IPL вышел на рынок с новым тендером на закупку карбамида объемом 2 млн т. 
+Индийский импортер IPL вышел на рынок с новым тендером на закупку карбамида объемом 2 млн т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *28.07.2025 Минеральные удобрения*
 
@@ -58,13 +67,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*30.06.2025 Минеральные удобрения*
-
-**Покупатели нуждаются в удобрениях и готовы платить больше**
-
-За прошедшую неделю индексы цен на Prilled Urea и Granular Urea FOB Baltic выросли на 8%.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
