--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -17,6 +17,19 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*11.08.2025 Пшеница*
+
+**Экспортные пошлины на зерновые на нуле**
+
+Экспортные цены на пшеницу снизились на 2 долл. по сравнению с прошлой неделей. 
+
+С 13 по 19 августа 2025 г. экспортные пошлины на пшеницу, ячмень и кукурузу в России будут нулевыми. 
+
+Минсельхоз Франции повысил прогноз урожая мягкой пшеницы в стране на 500 тыс. т до 33,1 млн т в 2025 г. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 *04.08.2025 Пшеница*
 
 **Ирак и Индонезия ждут импортную пшеницу**
@@ -65,17 +78,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*30.06.2025 Пшеница*
-
-**Формулу экспортной пошлины на пшеницу не пересчитают**
-
-Экспортные цены на пшеницу выросли на 2 долл. по сравнению с прошлой неделей.
-
-По предварительным данным базовая цена для расчета экспортной пошлины на пшеницу в России не изменится, на кукурузу и ячмень будет повышена на 1 тыс. руб.
-
-Экспортная пошлина на пшеницу, которая начнет действовать со 2 июля 2025 г. снизится до 56,3 руб., минимума с сентября 2021 г.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
