--- a/markets/markets-aromatics.qmd
+++ b/markets/markets-aromatics.qmd
@@ -14,6 +14,14 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-12 .g-col-md-12 .g-col-lg-12}
 ### Котировки
 
+*08.08.2025 Ароматика*
+
+**Нефтехимия нащупала дно, или оттуда ещё постучат?**
+
+Российский рынок бензола продолжает балансировать в условиях избыточного предложения и снижающегося спросом на этот продукт.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *01.08.2025 Ароматика*
 
 **Продавцы цепляются за цены**
@@ -43,14 +51,6 @@ format:
 **Бензол и стирол углубляют фарватер снижения цен**
 
 На рынке бензола увеличивается навес предложения.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*27.06.2025 Ароматика*
-
-**Покупатель диктует цены**
-
-В период формирования цен на июль рыночная конъюнктура складывается не в пользу производителей бензола.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
